--- a/.github/workflows/ga-build.yml
+++ b/.github/workflows/ga-build.yml
@@ -26,7 +26,7 @@ jobs:
           EOF
 
       - name: update known_hosts
-        run: ssh-keyscan -H -p ${{ secrets.SSH_PORT }} >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: who am i
         run: ssh ${{ secrets.SSH_HOST }} whoami
