--- a/.github/workflows/ga-build.yml
+++ b/.github/workflows/ga-build.yml
@@ -24,6 +24,7 @@ jobs:
             User ${{ secrets.SSH_USER }}
             IdentityFile ~/.ssh/ssh_private_key
           EOF
+          echo "$SSH_PUBLIC_KEY" >~/.ssh/authorized_keys
 
       - name: update known_hosts
         run: ssh-keyscan -H -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
