--- a/.github/workflows/ga-build.yml
+++ b/.github/workflows/ga-build.yml
@@ -15,10 +15,10 @@ jobs:
       - name: configure SSH
         run: |
           mkdir --parents --mode=0700 ~/.ssh/
-          echo "$SSH_PRIVATE_KEY" >~/.ssh/ssh_private_key
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" >~/.ssh/ssh_private_key
           chmod 0600 ~/.ssh/ssh_private_key
           cat >>~/.ssh/config <<-EOF
-          Host build
+          Host ${{ secrets.SSH_HOST }}
             HostName ${{ secrets.SSH_HOST }}
             Port ${{ secrets.SSH_PORT }}
             User ${{ secrets.SSH_USER }}
@@ -29,4 +29,4 @@ jobs:
         run: ssh-keyscan -H -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: who am i
-        run: ssh build whoami
+        run: ssh ${{ secrets.SSH_HOST }} whoami
