--- a/.github/workflows/ga-build.yml
+++ b/.github/workflows/ga-build.yml
@@ -29,4 +29,4 @@ jobs:
         run: ssh-keyscan -H -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: who am i
-        run: ssh ${{ secrets.SSH_HOST }} whoami
+        run: ssh ${{ secrets.SSH_HOST }} ls /opt/otabuzzman/www
