--- a/.github/workflows/ga-build.yml
+++ b/.github/workflows/ga-build.yml
@@ -29,4 +29,4 @@ jobs:
         run: ssh-keyscan -H -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: eventually build site
-        run: ssh ${{ secrets.SSH_HOST }} hugo --noTimes
+        run: ssh ${{ secrets.SSH_HOST }} 'bash -lc "cd lab/ ${{ secrets.SSH_HOST }} ; hugo --noTimes"'
