Fix GitHub Action to build site

--- a/.github/workflows/ga-build.yml
+++ b/.github/workflows/ga-build.yml
@@ -15,14 +15,14 @@ jobs:
       - name: configure SSH
         run: |
           mkdir --parents --mode=0700 ~/.ssh/
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" >~/.ssh/ssh_private_key
-          chmod 0600 ~/.ssh/ssh_private_key
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" >~/.ssh/otabuzzman.com
+          chmod 0600 ~/.ssh/otabuzzman.com
           cat >>~/.ssh/config <<-EOF
           Host ${{ secrets.SSH_HOST }}
             HostName ${{ secrets.SSH_HOST }}
             Port ${{ secrets.SSH_PORT }}
             User ${{ secrets.SSH_USER }}
-            IdentityFile ~/.ssh/ssh_private_key
+            IdentityFile ~/.ssh/otabuzzman.com
           EOF
 
       - name: update known_hosts
