--- a/.github/workflows/ga-build-site.yml
+++ b/.github/workflows/ga-build-site.yml
@@ -41,5 +41,5 @@ jobs:
 
       - name: eventually build site
         run: |
-          scp -P $site_port config.toml $site_user@$site_fqdn:~/lab/$site_fqdn
+          scp -i ~/.ssh/$site_fqdn -P $site_port config.toml $site_user@$site_fqdn:~/lab/$site_fqdn
           ssh $site_host 'bash -lc "cd lab/'$site_fqdn' ; hugo --noTimes"'
