--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,8 @@ title = "otabuzzman's blog"
 # use beautiful ananke theme module
 theme = ["github.com/theNewDynamic/gohugo-theme-ananke"]
 
+publishDir = "/opt/otabuzzman/www"
+
 # use content module from hub
 [module.imports]
   path = 'github.com/otabuzzman/otabuzzman.hub'
