Save work on otabuzzman.com setup

--- a/.github/workflows/ga-build-site.yml
+++ b/.github/workflows/ga-build-site.yml
@@ -37,9 +37,9 @@ jobs:
           EOF
 
       - name: update known_hosts
-        run: ssh-keyscan -H -p $site_port $site_host >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H -p $site_port $site_host >>~/.ssh/known_hosts
 
       - name: eventually build site
         run: |
           scp -P $site_port config.toml $site_host:~/lab/$site_fqdn
-          ssh $site_host 'bash -lc "cd lab/'$site_fqdn' ; hugo --noTimes"'
+          ssh $site_host 'bash -lc "cd lab/'$site_fqdn' ; hugo --publishDir /opt/otabuzzman/www --noTimes"'
