--- a/.github/workflows/ga-build-site.yml
+++ b/.github/workflows/ga-build-site.yml
@@ -42,4 +42,4 @@ jobs:
       - name: eventually build site
         run: |
           scp -P $site_port config.toml $site_host:~/lab/$site_fqdn
-          ssh $site_host 'bash -lc "cd lab/'$site_fqdn' ; hugo --publishDir /opt/otabuzzman/www --noTimes"'
+          ssh $site_host 'bash -lc "cd lab/'$site_fqdn' ; hugo --noTimes"'
