Work with experimental content

--- a/.github/workflows/ga-build-site.yml
+++ b/.github/workflows/ga-build-site.yml
@@ -19,9 +19,10 @@ jobs:
 
     steps:
       - name: checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          sparse-checkout: |
+            config.toml
 
       - name: configure SSH
         run: |
