--- a/hugo.toml
+++ b/hugo.toml
@@ -48,3 +48,31 @@ custom_css = ["custom.css"]
   username = "otabuzzman"
 [params.ananke.social.linkedin]
   username = "juergenschuck"
+
+# configurations for all (!) set up social media required
+[[params.ananke.social.networks]]
+slug  = "github"
+label = "GitHub"
+color = "#6cc644"
+profile = "https://github.com/%s/"
+icon = "github" # font awesome brand icon name
+
+[[params.ananke.social.networks]]
+slug  = "x-twitter"
+label = "X"
+color = "#000000"
+profile = "https://x.com/%s"
+icon = "x-twitter" # font awesome brand icon name
+link = "https://twitter.com/intent/tweet/"
+[params.ananke.social.networks.particles]
+url = "permalink"
+
+[[params.ananke.social.networks]]
+slug  = "linkedin"
+label = "LinkedIn"
+color = "#0077b5"
+profile = "http://linkedin.com/in/%s"
+icon = "linkedin" # font awesome brand icon name
+link = "https://www.linkedin.com/shareArticle"
+[params.ananke.social.networks.particles]
+url = "permalink"
