--- a/hugo.toml
+++ b/hugo.toml
@@ -51,12 +51,14 @@ custom_css = ["custom.css"]
 
 # configurations for all (!) set up social media required
 [[params.ananke.social.networks.github]]
+slug = "github"
 label = "GitHub"
 color = "#6cc644"
 profile = "https://github.com/%s/"
 icon = "github" # font awesome brand icon name
 
 [[params.ananke.social.networks.x-twitter]]
+slug = "x-twitter"
 label = "X"
 color = "#000000"
 profile = "https://x.com/%s"
@@ -67,6 +69,7 @@ url = "permalink"
 
 # https://stackoverflow.com/a/61583095
 [[params.ananke.social.networks.linkedin]]
+slug = "linkedin"
 label = "LinkedIn"
 color = "#0077b5"
 profile = "http://linkedin.com/in/%s"
