--- a/hugo.toml
+++ b/hugo.toml
@@ -50,14 +50,14 @@ custom_css = ["custom.css"]
   username = "juergenschuck"
 
 # configurations for all (!) set up social media required
-[[params.ananke.social.networks.github]]
+[params.ananke.social.networks.github]
 slug = "github"
 label = "GitHub"
 color = "#6cc644"
 profile = "https://github.com/%s/"
 icon = "github" # font awesome brand icon name
 
-[[params.ananke.social.networks.x-twitter]]
+[params.ananke.social.networks.x-twitter]
 slug = "x-twitter"
 label = "X"
 color = "#000000"
@@ -68,7 +68,7 @@ link = "https://twitter.com/intent/tweet/"
 url = "permalink"
 
 # https://stackoverflow.com/a/61583095
-[[params.ananke.social.networks.linkedin]]
+[params.ananke.social.networks.linkedin]
 slug = "linkedin"
 label = "LinkedIn"
 color = "#0077b5"
